--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <!-- TensorFlow.js warning suppression - MUST load first -->
     <script src="%PUBLIC_URL%/tfjs-suppress.js"></script>
     <!-- WebGazer 2.1.0 - Stable version that works with modern TensorFlow -->
-    <!-- <script src="https://unpkg.com/webgazer@2.1.0/dist/webgazer.min.js"></script> -->
+    <script src="https://unpkg.com/webgazer@2.1.0/dist/webgazer.min.js"></script>
     <!-- ML5.js for face and pose detection -->
     <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
     <script>
