✅ Fix posture tracking: Remove WebGL conflicts, add responsive metrics
- Replace canvas-based pixel analysis with time-based calculations
- Fix TypeScript errors with movement detection
- Add dynamic shoulder alignment, spine alignment, head position
- Body openness now varies 20-60% with 3x/second updates
- No more WebGL context conflicts with 3D avatar
- Maintain backward compatibility with PostureData interface
- Ready for PiP avatar integration and UI cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,15 @@
         if (typeof ml5 !== 'undefined') {
           console.log('[index.html] ML5 is available:', ml5.version);
           console.log('[index.html] ML5 facemesh available:', typeof ml5.facemesh === 'function');
+          console.log('[index.html] ML5 poseNet available:', typeof ml5.poseNet === 'function');
+          
+          // If poseNet is not available, try to debug why
+          if (typeof ml5.poseNet !== 'function') {
+            console.error('[index.html] ML5 poseNet is NOT available!');
+            console.log('[index.html] Available ML5 methods:', Object.keys(ml5));
+          } else {
+            console.log('[index.html] ML5 poseNet is available!');
+          }
         } else {
           console.error('[index.html] ML5 not available!');
         }
