Fix PiP avatar face tracking by resolving ML5/TensorFlow.js version conflicts
- Reverted to proven working library versions:
  - TensorFlow.js 1.7.4 (compatible with ML5 0.12.2)
  - ML5.js 0.12.2 (our existing code uses this API)
  - WebGazer 2.1.0 (loaded after TF.js to preserve ML5 functionality)
- Added LIBRARY_VERSIONS_TRUTH.md as source of truth for critical dependencies
- Added TestML5Direct component for isolated face tracking testing
- Both ML5 face tracking and WebGazer eye tracking now work together

Fixes the 'TypeError: n.incRef is not a function' and other version incompatibility issues.

--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,22 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/cursors.css" />
     <!-- TensorFlow.js warning suppression - MUST load first -->
     <script src="%PUBLIC_URL%/tfjs-suppress.js"></script>
-    <!-- WebGazer 2.1.0 - Stable version that works with modern TensorFlow -->
-    <script src="https://unpkg.com/webgazer@2.1.0/dist/webgazer.min.js"></script>
-    <!-- ML5.js for face and pose detection -->
+    <!-- TensorFlow.js 1.7.4 - Compatible with ML5 0.12.2 -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.7.4/dist/tf.min.js"></script>
+    <!-- ML5.js 0.12.2 - Proven working version -->
     <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
+    <!-- WebGazer 2.1.0 - Load AFTER our TF.js to preserve face tracking -->
+    <script src="https://unpkg.com/webgazer@2.1.0/dist/webgazer.min.js"></script>
     <script>
+      // Initialize TensorFlow.js backend before other libraries use it
+      if (typeof tf !== 'undefined') {
+        tf.ready().then(() => {
+          console.log('[index.html] TensorFlow.js backend ready:', tf.getBackend());
+        }).catch(err => {
+          console.error('[index.html] TensorFlow.js initialization error:', err);
+        });
+      }
+      
       // Debug ML5 loading
       console.log('[index.html] ML5 version:', typeof ml5 !== 'undefined' ? ml5.version : 'Not loaded');
       
