--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,18 @@
       }
     </script>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0; min-height: 100vh;">
+    <style>
+      /* Force background styles */
+      body {
+        background: linear-gradient(180deg, #c7ceea 0%, #fff5f0 50%, #ffc4e1 100%) !important;
+        min-height: 100vh !important;
+      }
+      #root {
+        min-height: 100vh !important;
+        background: transparent !important;
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
